--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>INFO2180 Lab 4</title>        
         <script src="app.js"></script>
+        <link rel = "stylesheet" href = styles.css >
     </head>
 
     <body>
@@ -15,9 +16,17 @@
         
         <main>
         </main>
-        
-        <button type = "submit" class = "Search">Search</button>
-        <p id = "list"></p>
+        <div class = "container">
+        <p>Search by Full Name or Alias</p>
+        <form class="form" action="superheroes.php" method="post">
+            <input type="text" placeholder="e.g. Captain America or Steve Rogers" name="input">
+            <button type = "submit" class = "Search">Search</button>
+          </form>
+        <h3>RESULT</h3>
+        <hr>
+        <div id = "result">           
+        </div>
+    </div>
         <footer>
         </footer>
     </body>
